# Gov-Smart-Signing-Tool

./: .gitignore  README.md  flake.nix  node_utils.js  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: tauri.yaml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/pcks11/: gov_smart.pub  libIDClassicSISTokenEngine.so.10.8.1050  libIDPVSlotEngine.so.10.8.1050  libIDPrimePKCS11.so.10.8.1050  libIDPrimeSISTokenEngine.so.10.8.1050  libIDPrimeTokenEngine.so.10.8.1050  libSACLog.so.10.8.1050  libSACUI.so.10  libSACUI.so.10.8.1050  libeTPKCS15.so.10  libeTPKCS15.so.10.8.1050  libeToken.so.10  libeTokenHID.so.10.8.1050
src-tauri/pcks11/SAC/: SACUIProcess
src-tauri/src/: crypto.rs  lib.rs  main.rs
src/components/: CertPopup.tsx  FormInput.tsx  ResponsiveLayout.tsx  SignPopup.tsx  Stepper.tsx  ThreeSateCard.tsx  ThreeStateToggle.tsx
src/components/FirstPage/: index.tsx
src/components/InitialScreen/: index.tsx
src/components/NewDigitalSignature/: index.tsx
src/components/NewDigitalSignature/helpers/: createPKCS12FromPassphraseModule.ts  generateRandomWords.ts
src/components/NewDigitalSignature/steps/: AliasStep.tsx  BranchStep.tsx  GenerateStep.tsx  InitialStep.tsx  PassphraseStep.tsx  PasswordStep.tsx  PrivateKeyStep.tsx  PublicKeyStep.tsx
src/components/SignatureTool/: index.tsx
src/components/TokenSignaturePage/: TokenList.tsx  TokenSearch.tsx  TokenSignatureTool.tsx  index.tsx
src/hooks/: useCurrentLanguage.ts
