[package]
name = "govsmart-signing-tool"
version = "0.3.0"
description = "Gov-Smart signing tool"
authors = ["you"]
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "govsmart_signing_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
serde_json = "1"
cryptoki = "0.9" 
base64 = "0.22.1"   
actix-web = "4"
chrono = "0.4.19"
pgp = "0.15.0"
actix-cors = "0.7.1"
urlencoding = "2.0.0"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

